K1J-1606: Implemented DisposeObsoleteDraftsJob that deletes drafts that been obsolete for an extended time. (#1259)
Co-authored-by: cigerhed <christoffer.sigerhed@soprasteria.com>
Co-authored-by: Erik Ågren <erik.agren@soprasteria.com>
Co-authored-by: mhornfeldt <michaela.hornfeldt@gmail.com>
Co-authored-by: Mikael Heglind <mikael.heglind@soprasteria.com>